--- a/page2.html
+++ b/page2.html
@@ -9,13 +9,13 @@
     <meta name="robots" content="index, follow">
     
 	<link rel="stylesheet" type="text/css" href="./bootsrap-3.3.7-dist/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
 	<script src="./js/jquery-2.2.4.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
+	<script src="./bootstrap-3.3.7-dist/js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/gmaps.js"></script>
 
