--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content=" Entreprise de web design à lyon, la chouette agence">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index, follow">
+    <meta http-equiv="Cache-control" content="public">
+
 
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
