--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     <meta name="robots" content="index, follow">
+    <meta http-equiv="Cache-control" content="public">
+
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -39,7 +41,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="logo meilleure agence web" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="logo meilleure agence web" height="40" /></a>
 				
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
